--- a/.gitignore
+++ b/.gitignore
@@ -59,4 +59,5 @@ crashlytics-build.properties
 
 The Mercenary Vault/Temp/*
 The Mercenary Vault/Logs/*
+The Mercenary Vault/Assets/Scenes/Level2Scene.unity
 
