--- a/.gitignore
+++ b/.gitignore
@@ -57,7 +57,7 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
-The Mercenary Vault/Temp/*
-The Mercenary Vault/Logs/*
-The Mercenary Vault/Assets/Scenes/Level2Scene.unity
+Temp/*
+Logs/*
+Assets/Scenes/Level2Scene.unity
 
